fix(css): make all lists have block spacing but not nested lists;

--- a/pages/templates/template.css
+++ b/pages/templates/template.css
@@ -22,7 +22,7 @@
 }
 
 body {
-  font-family: 'Cascadia Code', monospace;
+  font-family: "Cascadia Code", monospace;
   font-size: 1.1rem;
   background-color: var(--base-dark);
   color: var(--text);
@@ -83,7 +83,7 @@ h5 {
 
 /* Code: */
 code {
-  font-family: 'Cascadia Code', monospace;
+  font-family: "Cascadia Code", monospace;
   color: var(--gold);
   background: var(--base-dark);
   padding-inline: 0.6rem;
@@ -97,6 +97,16 @@ pre code {
 }
 
 /* Bullets: */
+ul:not(li ul),
+ul:not(li > ul) {
+  margin-block: 0.7em;
+}
+
+ol:not(li ol),
+ol:not(li > ol) {
+  margin-block: 0.7em;
+}
+
 ul {
   margin-left: 1rem;
 }
@@ -104,10 +114,6 @@ ul {
 ul > li {
   list-style-type: '-';
   padding-inline-start: 1ch;
-}
-
-ol {
-  margin-block: 0.7em;
 }
 
 ol > li {
